# mobile_agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  test.yml
agents/chat/: cli_chat_agent.py  prompts.py
agents/discovery/: brain_tools.py  cli_twitter_explorer.py  image_io.py  prompts_min.py  twitter_explorer.py
agents/gpt5/: gpt5_client_library.py
agents/ui_agent/: __init__.py  model_strategies.py  screenshot_tool.py  uitars_agent.py
assets/: README.md
config/flags/: flags_harm_v1_1.json
examples/: README.md
infra/: docker-compose.yml
infra/config/: db.env
infra/db/: __init__.py  engine.py  models.py  session.py
infra/sql/migrations/migrations/: 001_core_events.sql  002_roles_and_privs.sql
mobile_agent/: __init__.py  agent.py  cli.py  model_strategies.py  run_recorder.py  screenshot_tool.py  uitars_agent.py
tests/: test_action_parser.py
ui_tars_7b_kit/: action_executor.py  action_parser.py  prompts.py  test_step3_model.py
ui_tars_7b_kit/test_file/: core_agent.py  tars_client.py  tars_main.py  test_step1_parser.py  test_step2_adb.py
uia2_command_kit/: app_launcher.py  commands.py  device.py  invoker.py
uia2_command_kit/test_file/: testui2.py
